tests/ui/errors/traits/no-specialized-error-for-types-121398.stderr
error[E0277]: `String` is not an iterator
  --> $DIR/no-specialized-error-for-types-121398.rs:3:14
   |
LL | impl Bar for String {}
   |              ^^^^^^ `String` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `String`
note: required by a bound in `Bar`
  --> $DIR/no-specialized-error-for-types-121398.rs:1:12
   |
LL | trait Bar: Iterator {}
   |            ^^^^^^^^ required by this bound in `Bar`

error[E0277]: `Vec<T>` is not an iterator
  --> $DIR/no-specialized-error-for-types-121398.rs:5:17
   |
LL | impl<T> Bar for Vec<T> {}
   |                 ^^^^^^ `Vec<T>` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `Vec<T>`
note: required by a bound in `Bar`
  --> $DIR/no-specialized-error-for-types-121398.rs:1:12
   |
LL | trait Bar: Iterator {}
   |            ^^^^^^^^ required by this bound in `Bar`

error[E0277]: the type `String` cannot be mutably indexed by `Idx`
  --> $DIR/no-specialized-error-for-types-121398.rs:10:24
   |
LL | impl<Idx> Foo<Idx> for String {}
   |                        ^^^^^^ `String` cannot be mutably indexed by `Idx`
   |
   = help: the trait `IndexMut<Idx>` is not implemented for `String`
note: required by a bound in `Foo`
  --> $DIR/no-specialized-error-for-types-121398.rs:8:17
   |
LL | trait Foo<Idx>: IndexMut<Idx> {}
   |                 ^^^^^^^^^^^^^ required by this bound in `Foo`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<Idx> Foo<Idx> for String where String: IndexMut<Idx> {}
   |                               +++++++++++++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
